[gd_scene load_steps=7 format=3 uid="uid://dpk4x07y53qk5"]

[ext_resource type="Script" path="res://Shop.gd" id="1_pisw3"]
[ext_resource type="Texture2D" uid="uid://d3w656holodu1" path="res://Art Assetts/soapbutton.png" id="2_f0ifi"]
[ext_resource type="Texture2D" uid="uid://rdgeq1dyef3u" path="res://Art Assetts/Soapmenu.png" id="3_ukr1e"]
[ext_resource type="Texture2D" uid="uid://wcdjsswimdbp" path="res://Art Assetts/UwUbutton.png" id="4_ymx1s"]
[ext_resource type="Texture2D" uid="uid://c8iwjerkmluhi" path="res://Art Assetts/OwObutton.png" id="5_o8a1x"]
[ext_resource type="Texture2D" uid="uid://c1wvbba05qfn8" path="res://Art Assetts/-w-button.png" id="6_n2djx"]

[node name="Shop" type="Node2D"]
script = ExtResource("1_pisw3")

[node name="Shopbutton" type="TextureButton" parent="."]
offset_left = 857.0
offset_top = -107.0
offset_right = 1157.0
offset_bottom = 193.0
texture_normal = ExtResource("2_f0ifi")

[node name="Shopmenu" type="Sprite2D" parent="."]
position = Vector2(877, 496)
scale = Vector2(1.8, 2.94)
texture = ExtResource("3_ukr1e")

[node name="upgrade1" type="TextureButton" parent="."]
offset_left = 600.0
offset_top = 490.0
offset_right = 900.0
offset_bottom = 790.0
scale = Vector2(0.6, 0.6)
texture_normal = ExtResource("4_ymx1s")

[node name="upgrade1" type="Label" parent="upgrade1"]
layout_mode = 0
offset_left = 100.0
offset_top = 10.0
offset_right = 166.0
offset_bottom = 62.0
scale = Vector2(1.4, 1.4)
text = "Cost : 10
Gain : 5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="upgrade2" type="TextureButton" parent="."]
offset_left = 780.0
offset_top = 490.0
offset_right = 1080.0
offset_bottom = 790.0
scale = Vector2(0.6, 0.6)
texture_normal = ExtResource("5_o8a1x")

[node name="upgrade2" type="Label" parent="upgrade2"]
layout_mode = 0
offset_left = 100.0
offset_top = 10.0
offset_right = 185.0
offset_bottom = 62.0
scale = Vector2(1.4, 1.4)
text = "Cost : 100
Gain : 5000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="upgrade3" type="TextureButton" parent="."]
offset_left = 960.0
offset_top = 490.0
offset_right = 1260.0
offset_bottom = 790.0
scale = Vector2(0.6, 0.6)
texture_normal = ExtResource("6_n2djx")

[node name="upgrade3" type="Label" parent="upgrade3"]
layout_mode = 0
offset_left = 70.0
offset_top = 10.0
offset_right = 199.0
offset_bottom = 62.0
scale = Vector2(1.4, 1.4)
text = "Cost : 500,000
Gain : 1,000,000"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Shopbutton" to="." method="_on_shopbutton_pressed"]
[connection signal="pressed" from="upgrade1" to="." method="_on_upgrade_1_pressed"]
[connection signal="pressed" from="upgrade2" to="." method="_on_upgrade_2_pressed"]
[connection signal="pressed" from="upgrade3" to="." method="_on_upgrade_3_pressed"]
